--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="podaj_swoj_wiek">Podaj swoj wiek:</string>
     <string name="wiek">Wiek…</string>
     <string name="zapisz_mnie">Zapisz mnie</string>
+    <string name="hello_baby">Hello baby!</string>
 </resources>
